cloud/k8s/backend/jsxjp/components.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jsxjp
  labels:
    app: jsxjp
    component: deployment
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: jsxjp
  template:
    metadata:
      labels:
        app: jsxjp
        component: workload
    spec:
      containers:
      - image: ghcr.io/jobscale/jsxjp
        name: jsxjp
---
apiVersion: v1
kind: Service
metadata:
  name: jsxjp
  labels:
    app: jsxjp
    component: service
spec:
  selector:
    app: jsxjp
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jsxjp
  labels:
    app: jsxjp
    component: route
spec:
  parentRefs:
  - name: web-gateway
    namespace: gateway-system
    sectionName: https
  hostnames:
  - "jsx.jp"
  - "x.jsx.jp"
  - "www.jsx.jp"
  - "www.x.jsx.jp"
  rules:
  - backendRefs:
    - name: jsxjp
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-mail
  labels:
    app: jsxjp
    component: route
spec:
  parentRefs:
  - name: web-gateway
    namespace: gateway-system
    sectionName: https
  hostnames:
  - "mail.jsx.jp"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        hostname: mailu.jsx.jp
        statusCode: 302
